# quantum-math

./: Cargo.toml  LICENSE  README.md
schroidnger-equation/: Cargo.toml
schroidnger-equation/src/: lib.rs
src/: main.rs
