[package]
name = "schroidnger_equation"
version = "0.1.0"
authors = ["Your Name <youremail@example.com>"]
edition = "2021"
description = "A simple and intuitive way to simulate the evolution of a quantum wave function as described by the Schrödinger equation."
license = "MIT"
readme = "README.md"

[dependencies]
